	PR debug/51762 	* calls.c (emit_call_1): For noreturn calls force a REG_ARGS_SIZE 	note when !ACCUMULATE_OUTGOING_ARGS.

* gcc.dg/pr51762.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@182924 138bc75d-0d04-0410-961f-82ee72b054a4